[gd_scene load_steps=5 format=3 uid="uid://3a7o2ixjone3"]

[ext_resource type="Script" path="res://frontend/tile/tile_node.gd" id="1_s47jb"]
[ext_resource type="Texture2D" uid="uid://c0acfhkxqh76w" path="res://assets/pieces_sprite_sheet.png" id="2_qlk8e"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_u3elo"]
size = Vector2(16, 16)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_cc8mm"]
size = Vector2(16, 16)

[node name="Tile" type="Node2D" groups=["tile_nodes"]]
script = ExtResource("1_s47jb")

[node name="Area2D" type="Area2D" parent="."]
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("RectangleShape2D_u3elo")
debug_color = Color(0, 0.6, 0.701961, 0.211765)

[node name="Square" type="Polygon2D" parent="."]
color = Color(0.184314, 0.2, 0.313726, 1)
polygon = PackedVector2Array(8, -8, 8, 8, -8, 8, -8, -8)

[node name="Dot" type="Sprite2D" parent="."]
visible = false
texture = ExtResource("2_qlk8e")
region_enabled = true
region_rect = Rect2(40, 41, 4, 4)

[node name="Button" type="TouchScreenButton" parent="."]
shape = SubResource("RectangleShape2D_cc8mm")

[node name="Label" type="Label" parent="."]
visible = false
offset_left = -8.0
offset_top = -8.0
offset_right = 8.0
offset_bottom = 4.0
theme_override_font_sizes/font_size = 8

[connection signal="mouse_entered" from="Area2D" to="." method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_area_2d_mouse_exited"]
[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
